<resources>
    <string name="how_it_works">My name is Minsu kim, My name is Minsu Kim</string>
    <string name="policy_1">1. 회원의 책임과 의무
“바톤터치”는 개인과 개인간의 마켓 플레이스(심부름) 플랫폼으로서 회원 상호간에 도움 및 물품 거래가 이루어질 수 있도록 사이버 거래장소를 제공하며, 그 거래에 대해서 어떠한 보증도 제공하지 않습니다. 이용자간에 도움 및 물품 거래에 있어 결함, 사기행위 등 이용자간 거래행위에서 발생되는 모든 문제 및 손실에 대해서는 “바톤터치”에서 일체의 책임을 부담하지 않으며, 거래당사자간에 직접 해결해야 합니다.</string>
    <string name="policy_2">2. 개인정보 도용금지
모든 회원은 거래와 관련하여 “바톤터치”로 부터 제공받은 정보를 거래 외의 다른 목적으로 이용하거나 타인에게 유출 또는 제공해서는 안되며, 위반 사용으로 인한 모든 책임을 부담해야 합니다. 또한 회원은 자신의 개인정보를 책임 있게 관리하여 타인이 회원의 개인정보를 부정하게 이용하지 않도록 해야 합니다.</string>
    <string name="policy_3">3. 거래부적합 바톤에 대한 판매금지
“바톤터치”에 거래부적합 “바톤”을 등록할 경우, 해당 거래에 대한 법적인 책임은 거래당사자에게 있습니다. 만약 다른 이용자들에게 피해를 주게 되면, 등록한 “바톤”이 삭제 조치되거나 회원자격이 정지 또는 박탈당할 수 있습니다.</string>
    <string name="policy_4">4. 미성년자와의 거래 시 확인
미성년자가 법정대리인의 동의를 얻지 못한 “바톤”을 등록하여 다른 “회원”과 거래를 할 경우 구매자가 본 내역을 확인해야 하며, 이로 인해 발생될 수 있는 문제의 모든 책임은 “바톤터치”가 아닌 거래당사자에게 있습니다.</string>
    <string name="policy_5">바톤터치 이용약관</string>
    <string name="policy_6">제1조 (목적)
\n
본 약관은 주식회사 쿠키스 (이하 “회사”)가 운영하는 인터넷 사이트 및 모바일 어플리케이션(이하 “바톤터치”)에서 제공하는 전자상거래 관련 서비스 및 정보 서비스(이하 “서비스”)를 이용하는 자 간의 권리•의무 및 책임사항을 규정함을 목적으로 합니다.
\n
\n
제2조 (정의)
\n
“바톤터치”라 함은 “회사”가 컴퓨터, 모바일 전화 등 정보통신설비를 이용하여 “서비스”를 제공할 수 있도록 설정한 가상의 영업장을 말하며, 아울러 인터넷 사이트 및 모바일 어플리케이션을 운영하는 사업자의 의미로도 사용합니다.
“회원”이라 함은 “서비스”에 접속하여 개인정보를 제공하고 이 약관에 동의하고 회원등록을 한 자로서, ID와 비밀번호를 발급 받은 이용자를 말합니다.
(“비회원”이라 함은 “회원”에 가입하지 않고 “바톤터치”가 제공하는 “서비스”를 이용하는 자를 말합니다.)
“아이디(ID)”라 함은 회원의 식별과 “서비스” 이용을 위하여 회원이 설정하고 회사가 승인한 문자나 숫자 혹은 그 둘의 조합을 말합니다.
“비밀번호”라 함은 회원의 동일성 확인과 회원정보의 보호를 위하여 회원이 설정하고 회사가 승인한 문자나 숫자 혹은 그 둘의 조합을 말합니다.
“회원정보”라 함은 성명, 주민등록번호, 연락처 등 회사가 이용고객에게 회원가입 신청양식 (이하 “신청양식”)에 기재를 요청하는 이용고객의 개인정보를 말합니다.
“요청자”라 함은 도움 및 물품 등 “바톤터치”에서 거래 가능한 아이템의 구매를 원하는 회원을 말합니다.
“러너”라 함은 도움 및 물품 등 “바톤터치”에서 거래 가능한 아이템을 판매할 의사가 있는 회원을 말합니다.
"바톤 터치”라 함은 요청자 혹은 러너가 아이템을 제공 및 구입을 목적으로 상대방과 연결 되기 위하여 행하는 행위를 말합니다.
“바톤 만들기”라 함은 요청자가 자신이 구입을 원하는 아이템에 대한 내용을 저장하여 다른 회원들에게 노출 시키는 행위를 말합니다.
“아이템”이라 함은 “바톤터치”에서 이용자간에 거래되는 재능 및 물품을 말합니다.
위에서 정의되지 않은 이 약관상의 용어의 의미는 일반적인 거래관행에 의합니다.
\n
제3조 (약관 등의 명시와 설명 및 개정)
1. “회사”는 본 약관의 내용을 이용자가 쉽게 알 수 있도록 “서비스”가 제공되는 인터넷 사이트 및 모바일 어플리케이션에 게시함으로 효력이 발생합니다. 다만, 약관의 내용은 이용자가 연결화면을 통하여 볼 수 있도록 할 수 있습니다.

2. ”회사”는 전자 상거래 등에서의 소비자보호에 관한 법률, 약관의 규제에 관한 법률, 전자거래기본법, 전자 서명법, 정보통신망 이용 촉진 등에 관한 법률, 방문 판매 등에 관한 법률, 소비자보호법 등 관련법을 위배하지 않는 범위에서 본 약관을 개정할 수 있습니다.

3. ”회사”가 이 약관을 개정하는 경우에는 개정된 약관의 적용일자 및 개정사유를 명시하여, 그 적용일자 7일 이전부터 적용일자 전일까지 위 1)항의 방법으로 공지합니다.

4. ”회사”가 3항에 따라 개정약관을 공지 또는 통지하면서 회원에게 약관 변경 적용 일까지 거부의사를 표시하지 않으면 의사표시가 표명된 것으로 본다는 뜻을 공지 또는 통지하였음에도 불구하고 회원이 명시적으로 거부의사를 표시하지 아니하는 경우 회원이 개정약관에 동의한 것으로 봅니다.

5. 회원은 변경된 약관에 동의하지 아니하는 경우 “서비스”의 이용을 중단하고 이용계약을 해지할 수 있습니다.

6. 회원은 약관의 변경에 대하여 주의의무를 다하여야 하며, 변경된 약관의 부지로 인한 회원의 피해는 “회사”가 책임지지 않습니다.

7. 이 약관은 “회사”와 회원 또는 회원끼리 성립되는 서비스이용계약의 기본 약정입니다. “회사”는 필요한 경우, 특정서비스에 관하여 적용될 사항(이하 “개별약관”이라고 합니다)을 정하여 미리 공지할 수 있습니다. 회원이 이러한 개별약관에 동의하고 특정 서비스를 이용하는 경우에는 개별약관이 우선적으로 적용되고, 이 약관은 보충적인 효력을 갖습니다. 개별약관의 변경에 관해서는 위 2)항을 준용합니다.

8. 본 약관에서 정하지 아니한 사항과 본 약관의 해석에 관하여는 전자상거래 등에서의 소비자보호에 관한 법률, 약관의 규제 등에 관한 법률, 공정거래위원회가 정하는 전자상거래 등에서의 소비자보호지침 및 관계법령 또는 상관례에 따릅니다.
\n
제4조 (서비스의 중단)
1. ”회사”는 컴퓨터 등 정보통신설비의 보수점검, 교체 및 고장, 통신의 두절 등의 사유가 발생한 경우에는 “서비스”의 제공을 일시적으로 중단할 수 있습니다.

2. 사업종목의 전환, 사업의 포기, 업체간의 통합 등의 이유로 “서비스”를 제공할 수 없게 되는 경우에는 “회사”는 이용자에게 통지하거나, 이용자가 알아볼 수 있도록 공지사항으로 게시합니다.
\n
제5조 (회원가입 및 회원정보의 변경)
1. 이용자는 “회사”가 정한 가입 양식에 따라 회원정보를 기입한 후 본 약관에 동의한다는 의사표시를 함으로서 회원가입을 신청합니다.

2. ”회사”는 제1항과 같이 “회원”으로 가입할 것을 신청한 이용자 중 다음 각호에 해당하지 않는 한 “회원”으로 등록합니다.

가. 가입신청자가 이전에 회원자격을 상실한 적이 있는 경우, 다만 회원자격 상실 후 “이 필요하다고 판단하여 회원재가입 승낙을 얻은 경우에는 예외로 합니다. \n나. 등록 내용에 허위, 기재누락, 오기가 있는 경우 \n다. 기타 “회원”으로 등록하는 것이 “회사” 의 기술상 현저히 지장이 있다고 판단되는 경우 \n라. 실명이 아니거나, 타인의 명의 사용 등 신청양식을 허위로 기재한 경우 \n마. 신청양식의 기재사항을 누락하거나 오기하여 신청하는 경우 \n바. 사회의 질서 또는 미풍양속을 저해하거나 저해할 목적으로 신청한 경우 \n사. 기타 “회사”가 정한 이용요건에 충족되지 않았을 경우

3. 회원가입계약의 성립시기는 “회사” 의 승낙이 “회원”에게 도달한 시점으로 합니다.

4. ”회원”은 “서비스”내 “프로필” 화면을 통하여 언제든지 본인의 개인정보를 열람하고 수정할 수 있습니다. 다만, “서비스” 관리를 위해서 필요한 이동전화번호 등은 수정이 불가능합니다.

5. ”회원”은 회원가입신청시 기재한 사항이 변경되었을 경우 온라인으로 수정을 하거나 전자우편 기타 방법으로 “회사” 에 대하여 그 변경사항을 알려야 합니다.

6. 제5항의 변경사항을 “회사”에 알리지 않아 발생한 불이익에 대하여 “회사”는 책임지지 않습니다.
\n
제6조 (회원 탈퇴 및 자격 상실 등)
1. ”회원”은 회사에 언제든지 탈퇴를 요청할 수 있으며 “회사”는 즉시 회원탈퇴를 처리합니다.

2. ”회원”이 다음 각호의 사유에 해당하는 경우, “회사”는 해당 “회원”이 등록한 내용을 삭제 조치하거나, 해당 “회원”의 자격을 상실시킬 수 있으며 이에 대해 해당 “회원”에게 통보합니다. 다만, “회원”이 등록한 내용이 “회사”에 중대한 피해를 입힐 우려가 있다고 판단되는 경우에는 사전 통보 없이 해당 “회원”이 등록한 내용을 삭제 조치하거나, “회원”의 자격을 상실시킬 수 있습니다.

가. 가입 신청 시에 허위 내용을 등록한 경우 \n나. 다른 사람의 “바톤터치” “서비스” 이용을 방해하거나 그 정보를 도용하는 등 전자상거래 질서를 위협하는 경우 \n다. 제8조의 “거래부적합아이템”을 등록한 경우 \n라. 과대•과장 광고를 하는 경우(스팸성 홍보글, 도배행위 등) \n마. “회사”의 승인 없이 상업성 광고를 하는 경우(개인사업자•법인의 자사홍보 등) \n바. “회사”를 이용하여 법령 또는 본 약관이 금지하거나 공공의 질서와 선량한 풍속에 반하는 행위를 하는 경우 \n사. “회사”가 합리적인 판단에 기하여 서비스의 제공을 거부할 필요가 있다고 인정할 경우
\n
제7조 (거래부적합 아이템)
“회사”는 다음 각호에 해당하는 경우에 거래부적합 “아이템”으로 간주합니다.
\n
1. 불법복제품 (국내외 유명브랜드 이미테이션, 짝퉁 상품 등)

2. 지적재산권이 있어 저작권자의 승인을 받지 않은 “아이템”(해적판, 제본 도서 등)

3. 장물 또는 대포 (대포차, 대포폰 등)

4. 미성년자가 소지하기에 부적격한 “아이템” 및 청소년보호법에서 금지하는 “아이템” (담배, 금연 보조제, 전자담배, 주류 등)

5. 음란, 성인물, 성매매 등 풍기문란의 소지가 있는 “아이템”(성인용 만화, 잡지, 영상매체류, 성매매 등)

6. 자격증 소지가 필요한 “아이템”(총, 포, 도검류 등)

7. 전문의약품, 의료기기(동물의약품, 다이어트 약, 물리치료기 등)

8. 상품구매 사용자에게 피해가 발생될 수 있는 “아이템” (유통 불가능한 군용품 등)

9. 전자상거래 또는 통신판매로 유통, 판매가 금지된 “아이템” (온라인 판매 불가 “아이템” 등)

10. 기타 사회통념상 매매에 부적합한 “아이템”
\n
제8조 (회원에 대한 통지)
1. “회사”는 이동전화 단문메시지서비스(SMS), 푸시알림(App push)등으로 “회원”에게 통지할 수 있습니다.

2. ”회사”는 불특정다수 “회원”에 대한 통지의 경우 공지사항으로 게시함으로써 개별 통지에 갈음할 수 있습니다. 다만, “회원” 본인의 거래와 관련하여 중대한 영향을 미치는 사항에 대하여는 개별통지를 합니다.
\n
제9조 (계약의 성립)
1. 판매,구매 거래에 있어 승낙의 표시가 이용자 상호간 합의하에 이루어진 경우 계약이 성립한 것으로 봅니다. 이때 “회사”는 거래당사자간 계약에 개입하지 않으며, 이와 관련해서 일체의 책임을 부담하지 않습니다. 회원간의 거래 도중 발생한 사회적, 법적, 금전적, 그 외의 모든 문제 사항에 대하여 “회사”는 그 어떤 책임과 의무가 없음을 알려드립니다.

2. 이용자가 미성년자와 계약을 체결하는 경우에는 법정대리인의 동의를 얻지 못하면 미성년자 본인 또는 법정대리인이 계약을 취소할 수 있습니다.

3. 미성년자가 법정대리인의 동의를 얻지 못하고 “바톤터치”에 등록해 판매 활동을 하는 경우, 이용자는 이에 대한 확인 후 거래를 하여야 합니다. 이때 “회사”는 확인과정에 개입하지 않으며, 이와 관련해서 일체의 책임을 부담하지 않습니다.
\n
제10조 (재화 등의 공급)
이용자는 상호간 합의하에 배송방법을 정할 수 있습니다. “회사”는 이용자간 거래에 있어서 그 어떠한 규정을 두고 있지 않으며, 이와 관련해서 일체의 책임을 부담하지 않습니다.
\n
제11조 (청약철회 등)
“회사”의 회원간의 거래에 있어서 구매에 관한 계약에 있어 청약철회는 거래 당사자들 사이에 별도의 일별 규제없이 철회할 수 있습니다. 회원간의 거래에서 발생하는 청약철회에 관한 사항은 거래 당사자들의 귀책으로 “회사”는 어떠한 책임도 지지 않습니다.

제12조 (개인정보보호)
1. ”회사”는 이용자의 회원가입 시 상품등록 및 판매계약 이행에 필요한 최소한의 정보를 수집합니다. 

다음 사항을 필수사항으로 하며 그 외 사항은 선택사항으로 합니다.

가. 이동전화번호(“회원”의 경우) \n나. 비밀번호(“회원”의 경우) \n다. 이름 (“회원”의 경우) \n라. 이메일 (“회원”의 경우)

2. ”회사”가 이용자의 개인식별이 가능한 개인정보를 수집하는 때에는 반드시 당해 “이용자”의 동의를 받습니다.

3. 제공된 개인정보는 당해 이용자의 동의 없이 목적 외의 이용이나 제3자에게 제공하지 않습니다. 다만, 다음의 경우에는 예외로 합니다.

가. 통계작성, 학술연구 또는 시장조사를 위하여 필요한 경우로서 특정 개인을 식별할 수 없는 형태로 제공하는 경우 \n나. 도용방지를 위하여 본인확인에 필요한 경우 \n다. 법률의 규정 또는 법률에 의하여 필요한 불가피한 사유가 있는 경우

4. “회사”가 제2항과 제3항에 의해 이용자의 동의를 받아야 하는 경우에는 개인정보관리 책임자의 신원(소속, 성명 및 전화번호, 기타 연락처), 정보의 수집목적 및 이용목적, 제3자에 대한 정보제공 관련사항(제공 받은 자, 제공목적 및 제공할 정보의 내용) 등 정보통신망 이용촉진 등에 관한 법률 제22조제2항이 규정한 사항을 미리 명시하거나 고지해야 하며 이용자는 언제든지 이 동의를 철회할 수 있습니다.

5. 회원은 언제든지 “회사”가 가지고 있는 자신의 개인정보에 대해 열람 및 오류정정을 요구할 수 있으며 “회사”는 이에 대해 지체 없이 필요한 조치를 취할 의무를 집니다. 이용자가 오류의 정정을 요구한 경우에는 “회사”는 그 오류를 정정할 때까지 당해 개인정보를 이용하지 않습니다.

제13조 (회사의 의무)

1. “회사”는 법령과 이 약관이 금지하거나 공서양속에 반하는 행위를 하지 않으며 이 약관이 정하는 바에 따라 지속적이고, 안정적으로 이용자 상호간에 “아이템” 거래가 이루어질 수 있도록 온라인 거래장소를 원활하게 제공하는데 최선을 다합니다.

2. ”회사”는 이용자 상호간에 거래에 있어서 어떠한 보증도 제공하지 않습니다. “아이템” 결함, 사기행위 등 이용자 상호간 거래행위에서 발생되는 문제 및 손실에 대해서 “회사”는 일체의 책임을 부담하지 않으며, 거래당사자간에 직접 해결해야 합니다.
\n
제14조 (회원의 이동전화번호 및 비밀번호에 대한 의무)
1. 이동전화번호와 비밀번호에 관한 관리책임은 “회원”에게 있습니다.

2. ”회원”은 자신의 이동전화번호 및 비밀번호를 제3자에게 이용하게 해서는 안됩니다.

3. ”회원”이 자신의 이동전화번호 및 비밀번호를 도난 당하거나 제3자가 사용하고 있음을 인지한 경우에는 바로 “회사”에 통보하고 “회사”의 안내가 있는 경우에는 그에 따라야 합니다.
\n
제15조 (이용자의 의무)
이용자는 다음 각호의 행위를 하여서는 안됩니다. 만약 다음 각호와 같은 행위가 확인되면 “회사”는 해당 이용자에게 “서비스” 이용에 대한 제재를 가할 수 있으며 민형사상의 책임을 물을 수 있습니다.

1. 신청 또는 변경 시 허위 내용의 등록

2. 타인의 정보 도용

3. “바톤터치”에 게시된 정보의 허위 변경

4. “회사”가 정한 정보 이외의 정보 (컴퓨터 프로그램 등) 등의 송신 또는 게시

5. “회사” 및 기타 제3자의 저작권 등 지적재산권에 대한 침해

6. “회사”및 기타 제3자의 명예를 손상시키거나 업무를 방해하는 행위

7. 외설 또는 폭력적인 메시지, 화상, 음성, 기타 공서양속에 반하는 정보를 “바톤터치”에 공개 또는 게시하는 행위
\n
제16조 (저작권의 귀속 및 이용제한)
1. ”회사”가 작성한 저작물에 대한 저작권 기타 지적재산권은 “회사”에 귀속합니다.

2. 이용자는 “서비스”를 이용함으로써 얻은 정보 중 “회사”에게 지적재산권이 귀속된 정보를 “회사”의 사전 승낙 없이 복제, 송신, 출판, 배포, 방송 기타 방법에 의하여 영리목적으로 이용하거나 제3자에게 이용하게 하여서는 안됩니다.
\n
제17조(분쟁해결)
1. ”회사”는 이용자 상호간 분쟁에서 발생하는 문제에 대해서 일체의 책임을지지 않습니다. 이용자 상호간 분쟁은 당사자간에 직접 해결해야 합니다.

2. 이용자 상호간에 발생한 전자상거래 분쟁과 관련하여 이용자의 피해구제신청이 있는 경우에는 공정거래위원회 또는 시•도지사가 의뢰하는 분쟁조정기관의 조정에 따를 수 있습니다.
\n
제18조(재판권 및 준거법)
1. ”바톤터치”에서 발생하는 회원간에 발생한 전자상거래 분쟁에 관한 소송은 제소 당시의 이용자의 주소에 의하고, 주소가 없는 경우에는 거소를 관할하는 지방법원의 전속관할로 합니다. 다만, 제소 당시 이용자의 주소 또는 거소가 분명하지 않거나 외국 거주자의 경우에는 민사소송법상의 관할법원에 제기합니다.

2. ”바톤터치”의 회원간에 제기된 전자상거래 소송에는 한국법을 적용합니다.</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Main</string>
    <string name="str_done">완료</string>
    <string name="app_name">바톤터치</string>
    <string name="payment_1">현재 PG 서비스를 준비중에 있습니다.

빠른 시일 내에 PG 서비스로 충전 가능하도록 노력 하겠습니다 :)</string>
    <string name="payment_2">바톤터치의 서비스를 이용하시기 위해서는 쿠키(가상화폐)를 구매 하셔야 합니다.</string>
    <string name="payment_3">1쿠키는 100원입니다. 1000원 단위로 충전하실 수 있습니다.
예) 10000원 입금시 100쿠키가 충전됩니다 :)</string>
    <string name="payment_4">    아래의 계좌로 입금해주세요~
    
010 - 6555 - 2130 기업은행 예금주 : 김민수

야간 6시 ~ 익일 9시에 입금시 시간이 소요될 수 있습니다.</string>
    <string name="question1">1. 바톤터치는 어떤 서비스 인가요? </string>
    <string name="question1_1">바톤터치는 당신이 도움이 필요할 때 당신의 주위에 있는 사람들 중에서 일손을 연결해주는 플랫폼 서비스입니다. 도움이 필요한 일에 대해 바톤을 만들어 올리면 그 내역을 보고 도와줄 수 있는 사람이 당신에게 제안을 합니다. </string>
    <string name="question2">2. 전화번호는 왜 받나요?</string>
    <string name="question2_1">전화번호를 받음으로써 당신과 당신에게 도움을 주는 러너가 원활하게 소통할 수 있도록 합니다. 당신의 전화번호는 당신이 선택한 러너에 한하여 공개됩니다. </string>
    <string name="question3">3. 로그인/ 회원가입은 어떻게 하나요?</string>
    <string name="question3_1">바톤터치 어플을 켰을 때 첫 화면에서 직접 기입방법, 또는 페이스북으로 로그인 및 회원가입이 가능합니다.</string>
    <string name="question4">4. 러너란 누구인가요?</string>
    <string name="question4_1">러너들은 당신이 일손이 필요할 때 도움을 주는 당신의 이웃입니다. 당신이 도움이 필요한 부분에 대해 바톤을 생성하면 선택된 러너들이 당신을 대신해 일을 처리해주게 됩니다.</string>
    <string name="question5">5. 러너는 어떻게 될 수 있나요?</string>
    <string name="question5_1">모든 사용자들에게 바톤터치가 만족스러운 경험이 될 수 있도록 러너들은 바톤터치 운영팀이 직접 만나 인터뷰를 진행합니다. 러너가 되고 싶으신 분들은 jkim@batontouch.me로 연락해 주세요.</string>
    <string name="question6">6. 바톤은 무엇인가요?</string>
    <string name="question6_1">바톤은 당신이 도움이 필요한 일을 의미합니다. 바톤을 만들어 올리면 그것을 보고 당신의 가까운 곳에 있는 러너가 당신을 도와주게 됩니다.</string>
    <string name="question7">7. 쿠키 (CuKi)란 무엇인가요?</string>
    <string name="question7_1">쿠키는 바톤터치 내의 가상 화폐입니다. 쿠키를 충전해 바톤을 만들 수 있습니다. 쿠키를 통해 기프티콘의 가치가 측정되고 쿠키를 소유하고 있을 시에만 바톤을 만들어 도움을 요청할 수 있습니다.</string>
    <string name="question8">8. 프로필은 어떻게 관리하나요?</string>
    <string name="question8_1">본인의 프로필 관리는 ‘내 계정’ 탭에서 가능합니다. 자기 소개, 사진들을 통해 당신을 표현해 주세요. 상세하게 기록할 수록 서로 믿을 수 있는 신뢰 기반의 커뮤니티가 형성됩니다.</string>
    <string name="question9">9. 바톤은 어떻게 만드나요?</string>
    <string name="question9_1">당신을 도와줄 일손이 필요할 때 바톤 만들기 탭에서 필요한 도움을 입력해 요청합니다. 도움의 종류의 따라 목적지와 경유지 입력이 가능합니다.</string>
    <string name="question10">10. 바톤의 일을 내가 해주고 싶을 땐 어떻게 하나요? </string>
    <string name="question10_1">러너가 된 후 홈 탭을 누르면 이웃들이 올려 둔 바톤들이 보입니다. 바톤을 선택한 후 본인이 도움을 주고 싶은 바톤일 때 ‘내가 도와주기’ 버튼을 눌러서 도움을 권합니다.</string>
    <string name="question11">11. 러너는 어떻게 고르나요?</string>
    <string name="question11_1">러너들의 제안이 들어오면 푸시가 들어옵니다. 여기서 확인을 누르거나  ‘바톤관리’ 탭에서 ‘내가 부탁한 일’을 선택하면 바톤 상세 페이지로 이동합니다. 이제 당신이 만들어 놓은 바톤에 도움을 주고자 하는 러너들의 제안들이 보입니다. 러너들의 프로필을 확인한 후 당신을 도와줄 러너를 선택해 주세요.</string>
    <string name="question12">12. 나에게 도움을 준 러너에 대해 리뷰는 어떻게 쓰나요? </string>
    <string name="question12_1">러너가 해준 일이 완료되어 당신이 확인을 해주고 나면 리뷰하기 페이지로 넘어갑니다. (또는 일이 완료된 바톤을 누르면 리뷰하기 페이지가 뜹니다.) 당신을 위해 뛰어준 러너에 대해 정성스레 리뷰를 작성해주세요. </string>
    <string name="question13">13. 리뷰가 왜 중요한가요?</string>
    <string name="question13_1">품앗이라는 것은 서로를 믿을 수 있을 때 가능해 집니다. 이런 신뢰를 쌓기 위해서는 서로가 서로에게 리뷰를 작성해 주는 것이 필수적 입니다.</string>
    <string name="question14">14. 내가 할 일 관리하기</string>
</resources>